# compreffor

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  MANIFEST.in  README.md  README.rst  cffCompressor.py  config.sh  optimizeParameter.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  simpleCffCompressor.py  testCffCompressor.py  testData.py  testDummy.py  tox.ini
.github/workflows/: ci.yml
_custom_build/: backend.py
compreffor/: __init__.py  cxxCompressor.py  pyCompressor.py  testDummy.py  testPyCompressor.py
compreffor/test/: pyCompressor_test.py
cxx/: .gitignore  Makefile  cffCompressor.cc  cffCompressor.h  cffCompressor.py  cxxCompreffor.py  gen_data.py  run_compressor.py  testCffCompressor.py  testDummy.py
cxx-src/: Makefile  Makefile.vc  cffCompressor.cc  cffCompressor.h  compreff.def
cython-src/: _compreffor.cpp  _compreffor.pyx
py/: cffCompressor.py  testCffCompressor.py
src/cxx/: Makefile  Makefile.vc  cffCompressor.cc  cffCompressor.h
src/cython/: _compreffor.cpp  _compreffor.pyx
src/python/compreffor/: __init__.py  __main__.py  cxxCompressor.py  pyCompressor.py
src/python/compreffor/test/: pyCompressor_test.py  util.py
tools/: analyzer.py  gen_data.py  optimizeParameter.py  simpleCffCompressor.py  subr_grapher.py
