[bumpversion]
current_version = 0.4.5
commit = True
tag = False
tag_name = {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<release>[a-z]+)(?P<dev>\d+))?
serialize = 
	{major}.{minor}.{patch}.{release}{dev}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = final
values = 
	dev
	final

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[aliases]
test = pytest

[sdist]
formats = zip

[metadata]
license_file = LICENSE

[tool:pytest]
minversion = 2.8
testpaths = 
	src/python/compreffor
python_files = 
	*_test.py
python_classes = 
	*Test
addopts = 
	-v
	-r a
	--doctest-modules

